tests/fixtures/invalid/max_list_none.py
# Cannot call max() with List[int], None
x = max([1, 2, 3], None)
